# csv-tidyimport

./: .gitignore  Cashflow_Ausschnitt.csv  README.md  Salesprozess_Ausschnitt.csv  clean.csv  input.csv  output.json  pyproject.toml  requirements.txt  rules.yaml
cli/: db_handler.py  main.py
csv_importer/: engine.py  loader.py  result.py  spec.py  transformer.py
csv_importer/exporters/: json_exporter.py
examples/: example_input.csv  example_rules.yaml
src/cli/: main.py
src/csv_importer/: constants.py  engine.py  loader.py  spec.py  spec_validator.py  transformer.py  utils.py
src/csv_importer/exporters/: csv_exporter.py  json_exporter.py
