[project]
name = "csv-tidyimport"
version = "0.1.0"
description = "YAML-driven CSV/Excel clean-and-transform library"
authors = [
    { name="Verena Lechner" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyyaml"
]

[project.scripts]
tidyimport = "cli.main:main"
